Pics add &  Page route fixed (Not Responsive)

--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -2,32 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-.layout {
-  max-width: 1100px;
-  width: 90%;
-  margin: 0 auto;
+.profile-img {
+  content: url(../../assets/Profile.svg);
+  max-width: 100%;
+  height: auto;
 }
 
-.circle {
-  width: 250px;
-	height: 250px;
-	background: #D9D9D9;
-	border-radius: 100%;
-}
-
-.edit-profil {
-  color: #46464F;
-  opacity: 0.38;
-}
-
-.change_pass {
-  color: #46464F;
-  opacity: 0.38;
-}
-
-.logout {
-  color: #BA1A1A;
-  opacity: 0.38;
+.logout-img {
+  content: url(../../assets/Logout-img.svg);
+  max-width: 100%;
+  height: auto;
 }
 
 .breadcrumb li {
@@ -45,7 +29,7 @@
 .breadcrumb li+li:before {
   padding: 8px;
   color: #46464F;
-  content: ">\00a0";
+  content: '\00a0'url(../../assets/breadcrumb-arrow.svg)'\00a0' ;
   opacity: 0.38;
 }
 
