--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,6 @@ button:focus-visible {
   }
   a:hover {
     color: #0A008A;
-    text-decoration: underline;
   }
   button {
     background-color: #f9f9f9;
@@ -90,9 +89,3 @@ button:active {
   background-color: #000000;
   color: #FFFFFF;
 }
-
-/* button:disabled {
-  background-color: #46464F;
-  opacity: 0.38;
-  color: #000000;
-} */
